ARROW-1450: [Python] Raise proper error if custom serialization handler fails

This fixes the serialize and deserialize methods to throw the right exceptions.

Author: Philipp Moritz <pcmoritz@gmail.com>

Closes #1029 from pcmoritz/pyarrow-serialization-error and squashes the following commits:

249b38ed [Philipp Moritz] formatting
2d872a4c [Philipp Moritz] fixes
caad76d1 [Philipp Moritz] add test for deserialization (needs fixing)
57772124 [Philipp Moritz] fix python serialization error propagation