cpp/src/arrow/python/common.h
@@ -145,6 +145,8 @@ struct ARROW_EXPORT PyObjectStringify {
 
 Status CheckPyError(StatusCode code = StatusCode::UnknownError);
 
+Status PassPyError();
+
 // TODO(wesm): We can just let errors pass through. To be explored later
 #define RETURN_IF_PYERROR() RETURN_NOT_OK(CheckPyError());
 
